--- a/main/index.html
+++ b/main/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./output_main.css">
     <link rel="icon" href="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_roundfull.png?x-oss-process=style/small_size_rule">
-    <title>你好！我是张景赫</title>
+    <title>张景赫</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
                     深学笃行
                 </div>                
                 <div class="text-2xl relative font-light text-left z-[-1]  pt-3 pb-5  text-[#686661] sm:hidden">
-                    “为学之实，固在践履。苟徒知而不行，诚与不学无异。”知识要&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;转化为人们的能力和素养，就必须躬身实践，在实践中砥砺才干。不要以知代行，&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;，也不要以行取代知，要理论与实践辩证统一。
+                    “为学之实，固在践履。苟徒知而不行，诚与不学无异。”知识要&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;转化为人们的能力和素养，就必须躬身实践，在实践中砥砺才干。不要以知代行，&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;也不要以行取代知，要理论与实践辩证统一。
                     
                 </div>
                 <div class="text-xl relative font-light text-left z-[-1] pt-3 pb-5  text-[#686661] sm:block hidden">
@@ -87,12 +87,12 @@
 
         <div class="mb-2 mt-[-20px] flex flex-none items-center justify-center gap-2 text-xl">
             <div class="mr-4 h-px flex-1 bg-gradient-to-l from-gray-100 to-white"></div>
-            <h2 class="text-2xl  font-bold text-[#444]">掌握的技能</h2>
+            <h2 class="text-2xl  font-bold text-[#444]">学习历程</h2>
             <div class="ml-4 h-px flex-1 bg-gradient-to-r from-gray-100 to-white"></div>
         </div>
 
         <p class="flex-none text-lg text-[#888]" style="text-wrap: balance;">
-            百尺竿头，更进一步
+            朝乾夕惕，持之以恒
         </p>
     </div>
 
@@ -256,10 +256,7 @@
 
 
 
-    <div class="w-full h-[200px] sm:h-fit sm:pb-8 relative pl-10" style="background-image: url(https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/orange-bg.svg);">
-        <!-- <div class="w-[300px] h-full  float-right">
-            <!-- <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_roundfull.png?x-oss-process=style/small_size_rule" alt="" class="w-[70px] m-10 ml-[100px]">
-        </div> -->
+    <div class="w-full h-[230px] sm:h-fit sm:pb-8 relative pl-10" style="background-image: url(https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/orange-bg.svg);">
         <div class="max-w-[1024px] m-auto pt-8">
             <div class="w-fit h-full bottom-list sm:float-none float-left">
                 <div class="text-[#f0c5ad] font-bold">了解更多</div>
@@ -278,26 +275,7 @@
                         生活记录
                     </a>
                 </div>
-            </div>
-
-            <div class="w-fit h-full bottom-list float-right text-right sm:float-none sm:text-left sm:pt-5">
-                <div class="text-[#f0c5ad] font-bold">快速联系我</div>
-                <div>
-                    <a href="tel:+86 158-3069-7501" class="bottom-link-contact">
-                        +86 158-3069-7501
-                    </a>
-                </div>
-                <div>
-                    <a href="mailto:jinghe.zhang@hotmail.com" class="bottom-link-contact">
-                       jinghe.zhang@hotmail.com
-                    </a>
-                </div>
-                <div>
-                    <a href="iPhone15Pro.html" class="sm:hidden text-sm font-bold" style="color: #f0c5ad;">
-                       为我买一部 iPhone15 Pro
-                    </a>
-                </div>
-            </div>            
+            </div>       
             <div class="w-fit h-full bottom-list float-left sm:float-none pl-[50px] sm:pl-0 sm:pt-5">
                 <div class="text-[#f0c5ad] font-bold">我在互联网</div>
                 <div class="leading-9 mt-[-6px]">
@@ -327,7 +305,7 @@
             </div>
 
             <div class="w-fit h-full bottom-list float-left sm:float-none pl-[50px] sm:pl-0 sm:pt-5">
-                <div class="text-[#f0c5ad] font-bold">我的好朋友</div>
+                <div class="text-[#f0c5ad] font-bold">我的好友</div>
                 <div class="leading-9">
                     <a href="https://www.leyoubaloy.xyz/" target="_blank" class="bottom-link-friend">
                         <img src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/img/qq%e5%a4%b4%e5%83%8f.jpg" class="inline w-10 rounded-full border-2 border-white " alt="">
@@ -335,12 +313,34 @@
                 </div>
             </div>
 
+            <div class="w-fit h-full bottom-list float-right text-right sm:float-none sm:text-left sm:pt-5">
+                <div class="text-[#f0c5ad] font-bold">我的联系方式</div>
+                <div>
+                    <a href="tel:+86 158-3069-7501" class="bottom-link-contact">
+                        +86 158-3069-7501
+                    </a>
+                </div>
+                <div>
+                    <a href="mailto:jinghe.zhang@hotmail.com" class="bottom-link-contact">
+                       jinghe.zhang@hotmail.com
+                    </a>
+                </div>
+                <!-- <div>
+                    <a href="iPhone15Pro.html" class="sm:hidden text-sm font-bold" style="color: #f0c5ad;">
+                       为我买一部 iPhone15 Pro
+                    </a>
+                </div>                 -->
+                <div class="h-10 mt-7">
+                        <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/signature/002_dark2.png?x-oss-process=style/small_size_rule" class="w-[100px] float-right sm:float-left" alt="">
+                </div>
+            </div>     
+
         </div>
     </div>
     <div class="bg-gradient-to-br relative bottom-0 from-[#d94217] via-[#a91d04] to-[#861103] text-white w-full h-[80px]">
                 <!-- <div class="p-2">
         </div> -->
-        <div class="p-2 text-sm sm:text-xs text-gray-300  sm:leading-5 text-center sm:text-left pt-6 sm:pt-5 sm:pl-10">
+        <div class="p-2 text-sm sm:text-xs text-red-400  sm:leading-5 text-center sm:text-left pt-8 sm:pt-5 sm:pl-10">
             Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号 <br class="hidden sm:block"> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px; margin-bottom: 5px;" alt=""></a>&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a>
         </div>
     </div>
