--- a/main/index.html
+++ b/main/index.html
@@ -304,14 +304,14 @@
                 </div>
             </div>
 
-            <div class="w-fit h-full bottom-list float-left sm:float-none pl-[50px] sm:pl-0 sm:pt-5">
+            <!-- <div class="w-fit h-full bottom-list float-left sm:float-none pl-[50px] sm:pl-0 sm:pt-5">
                 <div class="text-[#f0c5ad] font-bold">我的好友</div>
                 <div class="leading-9">
                     <a href="https://www.leyoubaloy.xyz/" target="_blank" class="bottom-link-friend">
                         <img src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/img/qq%e5%a4%b4%e5%83%8f.jpg" class="inline w-10 rounded-full border-2 border-white " alt="">
                     </a>
                 </div>
-            </div>
+            </div> -->
 
             <div class="w-fit h-full bottom-list float-right text-right sm:float-none sm:text-left sm:pt-5">
                 <div class="text-[#f0c5ad] font-bold">我的联系方式</div>
