--- a/main/index.html
+++ b/main/index.html
@@ -24,7 +24,7 @@
                 <div class="text-2xl font-extrabold text-left z-[-1] pt-6  text-[#4f4d4a]">
                     深学笃行
                 </div>                
-                <div class="text-2xl relative font-light text-left z-[-1]  pt-3 pb-5  text-[#686661] sm:hidden">
+                <div class="text-2xl relative font-light text-left z-[-1]  pt-3 pb-5  text-[#686661] sm:hidden underline sm:under decoration-gray-500/30 decoration-1 underline-offset-4">
                     “为学之实，固在践履。苟徒知而不行，诚与不学无异。”知识要&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;转化为人们的能力和素养，就必须躬身实践，在实践中砥砺才干。不要以知代行，&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;也不要以行取代知，要理论与实践辩证统一。
                     
                 </div>
