update homepage style

--- a/main/index.html
+++ b/main/index.html
@@ -19,20 +19,17 @@
 <body>
 
     <div class="w-full">
-        <div class=" w-full m-auto mb-[50px]  shadow-md bg-opacity-90 bg-gradient-to-tr from-[#ffffff00] via-[#b0b0b057] to-[#3e3e3e5d]">
+        <div class=" w-full m-auto bg-gradient-to-t from-[#fff] via-[#b0b0b02c] to-[#3e3e3e3d] pb-[300px] sm:pb-[200px]">
             <div class="max-w-[960px] sm:max-w-[300px] m-auto pt-10 ">
                 <div class="text-2xl font-extrabold text-left z-[-1] pt-6  text-[#4f4d4a]">
                     深学笃行
                 </div>                
                 <div class="text-2xl relative font-light text-left z-[-1]  pt-3 pb-5  text-[#686661] sm:hidden underline sm:under decoration-gray-500/30 decoration-1 underline-offset-4">
-                    “为学之实，固在践履。苟徒知而不行，诚与不学无异。”知识要&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;转化为人们的能力和素养，就必须躬身实践，在实践中砥砺才干。不要以知代行，&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;也不要以行取代知，要理论与实践辩证统一。
+                    “为学之实，固在践履。苟徒知而不行，诚与不学无异。”知识要转化为人们的能力和素养，就必须躬身实践，在实践中砥砺才干。不要以知代行，夸夸其谈却无务实举措；也不要以行取代知，不求根务本，否则无法达成理论与实践的辩证统一。
                     
                 </div>
                 <div class="text-xl relative font-light text-left z-[-1] pt-3 pb-5  text-[#686661] sm:block hidden">
-                    为学之实，固在&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;践履。苟徒知而不行，诚&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;与不学无异。
-                </div>
-                <div class="z-10 ">
-                    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/%E9%80%8F%E6%98%8E-%E5%8D%8A%E8%BA%AB.png" width="200px" class="m-auto mt-[-200px] mr-[140px] sm:mr-[20px] overflow-hidden drop-shadow-md" alt="">
+                    为学之实，固在践履。苟徒知而不行，诚与不学无异。
                 </div>
             </div>
         </div>
@@ -40,7 +37,7 @@
 
 
 
-    <div class="mb-20">
+    <div class="mb-20 mt-[-280px] sm:pt-[80px]">
 
         <div class="max-w-[1024px] h-fit m-auto 3xl:flex 2xl:flex xl:flex lg:flex md:flex flex-row">
             <div class="more-basis">
@@ -87,7 +84,7 @@
 
         <div class="mb-2 mt-[-20px] flex flex-none items-center justify-center gap-2 text-xl">
             <div class="mr-4 h-px flex-1 bg-gradient-to-l from-gray-100 to-white"></div>
-            <h2 class="text-2xl  font-bold text-[#444]">学习历程</h2>
+            <h2 class="text-2xl  text-[#444]">学习历程</h2>
             <div class="ml-4 h-px flex-1 bg-gradient-to-r from-gray-100 to-white"></div>
         </div>
 
