--- a/main/index.html
+++ b/main/index.html
@@ -121,7 +121,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="./life/artworks/" target="_blank" class="bottom-link-lg">
+                    <a href="./artworks/" target="_blank" class="bottom-link-lg">
                         艺术作品
                     </a>
                 </div>
