--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,7 @@
     <title>ZJH.ASIA</title>
 </head>
 <body>
-    <div class="w-full h-20 fixed top-0 left-0 z-10 backdrop-blur-sm bg-gray-200 bg-opacity-10 border border-gray-300">
+    <div class="w-full h-20 fixed top-0 left-0 z-10 backdrop-blur-sm bg-gray-200 bg-opacity-10 border-b border-gray-300">
         <div class="p-7 font-bold text-gray-700/60">
             <div class="text-center m-auto">ZJH.ASIA</div>
             <div class="text-center" style="font-size: 2px; font-weight:lighter;">更新于 2023.10.7.</div>
@@ -39,7 +39,7 @@
 
         <div class="max-w-[640px] sm:max-w-[200px] h-fit m-auto 3xl:flex 2xl:flex xl:flex lg:flex md:flex flex-row">
             <div class="h-[500px]  w-full font-light text-[#888] text-9xl sm:text-8xl text-center pt-[200px]">
-                😱
+                😕
             </div>
             <!-- <div class="more-basis">
                 <div class="more-title">
