--- a/main/index.html
+++ b/main/index.html
@@ -38,7 +38,7 @@
     <div class="mb-20 mt-[-280px] sm:pt-[80px]">
 
         <div class="max-w-[640px] sm:max-w-[200px] h-fit m-auto 3xl:flex 2xl:flex xl:flex lg:flex md:flex flex-row">
-            <div class="h-[500px]  w-full font-light text-[#888] text-9xl sm:text-8xl text-center pt-[200px]">
+            <div class="h-[400px] sm:h-[350px]  w-full font-light text-[#888] text-9xl text-center pt-[130px] sm:pt-[150px]">
                 😕
             </div>
             <!-- <div class="more-basis">
