--- a/main/index.html
+++ b/main/index.html
@@ -8,8 +8,8 @@
     <title>ZJH.ASIA</title>
 </head>
 <body>
-    <div class="w-full h-20 fixed top-0 left-0 z-10 backdrop-blur-sm bg-gray-200 bg-opacity-10 border-b border-gray-300">
-        <div class="p-7 font-bold text-gray-700/60">
+    <div class="w-full h-20 fixed top-0 left-0 z-10 backdrop-blur-sm bg-purple-200 bg-opacity-10 border-b border-purple-300">
+        <div class="p-7 font-bold text-purple-700/60">
             <div class="text-center m-auto">ZJH.ASIA</div>
             <div class="text-center" style="font-size: 2px; font-weight:lighter;">更新于 2023.10.7.</div>
         </div>
@@ -17,7 +17,7 @@
     
 
     <div class="w-full">
-        <div class="pt-8 w-full m-auto bg-gradient-to-t from-[#fff] via-[#b0b0b02c] to-[#3e3e3e3d] pb-[300px] sm:pb-[200px]">
+        <div class="pt-8 w-full m-auto bg-gradient-to-t from-[#fff] via-purple-100 to-purple-300 pb-[300px] sm:pb-[200px]">
             <div class="max-w-[960px] sm:max-w-[300px] m-auto pt-10 text-center">
 
                 <!-- <div class="mb-2 mt-[-20px] flex flex-none items-center justify-center gap-2 text-xl">
@@ -38,8 +38,9 @@
     <div class="mb-20 mt-[-280px] sm:pt-[80px]">
 
         <div class="max-w-[640px] sm:max-w-[200px] h-fit m-auto 3xl:flex 2xl:flex xl:flex lg:flex md:flex flex-row">
-            <div class="h-[400px] sm:h-[350px]  w-full font-light text-[#888] text-9xl text-center pt-[130px] sm:pt-[150px]">
-                😕
+            <div class="h-[520px] sm:h-[600px]  w-full font-light text-purple-400 text-2xl text-center pt-[70px] sm:pt-[150px] ">
+                <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/storyline-hands-holding-a-magic-book.png" alt="" class="w-48 m-auto">
+                <div class="italic pt-4">在准备考试</div>
             </div>
             <!-- <div class="more-basis">
                 <div class="more-title">
@@ -80,12 +81,12 @@
     </div>
 
 
-    <!-- <div class="mb-0 flex h-48 w-full flex-col items-stretch rounded-t-[50%] bg-gradient-to-b from-gray-100/60 via-white to-white pt-24 text-center">
+    <!-- <div class="mb-0 flex h-48 w-full flex-col items-stretch rounded-t-[50%] bg-gradient-to-b from-purple-100/60 via-white to-white pt-24 text-center">
 
         <div class="mb-2 mt-[-20px] flex flex-none items-center justify-center gap-2 text-xl">
-            <div class="mr-4 h-px flex-1 bg-gradient-to-l from-gray-100 to-white"></div>
+            <div class="mr-4 h-px flex-1 bg-gradient-to-l from-purple-100 to-white"></div>
             <h2 class="text-2xl  text-[#444]">学习历程</h2>
-            <div class="ml-4 h-px flex-1 bg-gradient-to-r from-gray-100 to-white"></div>
+            <div class="ml-4 h-px flex-1 bg-gradient-to-r from-purple-100 to-white"></div>
         </div>
 
         <p class="flex-none text-lg text-[#888]" style="text-wrap: balance;">
@@ -96,15 +97,15 @@
     -->
 
 
-    <!-- <div class="mb-[100px] flex h-40 w-full flex-col items-stretch rounded-b-[50%] bg-gradient-to-t from-gray-100/60 via-white to-white pt-16 text-center"></div> -->
+    <!-- <div class="mb-[100px] flex h-40 w-full flex-col items-stretch rounded-b-[50%] bg-gradient-to-t from-purple-100/60 via-white to-white pt-16 text-center"></div> -->
 
     <!-- f0c5ad -->
     <!-- <div class="w-full h-[230px] sm:h-fit sm:pb-8 relative pl-10" style="background-image: url(https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/orange-bg.svg);"> -->
 
-    <div class="w-full h-[220px] sm:h-fit sm:pb-8 relative pl-10 border-t border-gray-200">
+    <div class="w-full h-[220px] sm:h-fit sm:pb-8 relative pl-10 border-t border-purple-200">
         <div class="max-w-[640px] m-auto pt-8">
             <div class="w-fit h-full bottom-list sm:float-none float-left">
-                <div class="text-gray-400/60 font-bold">了解更多</div>
+                <div class="text-purple-400/60 font-bold">了解更多</div>
                 <div>
                     <a href="./life/blog/" target="_blank" class="bottom-link-lg">
                         生活记录
@@ -127,7 +128,7 @@
                 </div>
             </div>       
             <div class="w-fit h-full bottom-list float-left sm:float-none pl-[50px] sm:pl-0 sm:pt-5">
-                <div class="text-gray-400/60 font-bold">我在互联网</div>
+                <div class="text-purple-400/60 font-bold">我在互联网</div>
                 <div class="ml-[-5px] mt-[-6px]">
                     <div class="pt-2">
                         <a href="https://weibo.com/u/5535319573" target="_blank" class="bottom-link-social">
@@ -165,7 +166,7 @@
             </div>
 
             <div class="w-fit h-full bottom-list float-right text-right sm:float-none sm:text-left ">
-                <div class="text-gray-400/60 font-bold">我的联系方式</div>
+                <div class="text-purple-400/60 font-bold">我的联系方式</div>
                 <div>
                     <a href="tel:+86 158-3069-7501" class="bottom-link-contact">
                         +86 158-3069-7501
@@ -184,11 +185,11 @@
 
 
     <!-- <div class="bg-gradient-to-br relative bottom-0 from-[#d94217] via-[#a91d04] to-[#861103] text-white w-full h-[80px]"> -->
-    <div class="bg-gradient-to-br relative bottom-0  w-full h-[80px] border-t border-gray-200">
+    <div class="bg-gradient-to-br relative bottom-0  w-full h-[80px] border-t border-purple-200">
  
         <!-- <div class="p-2">
         </div> -->
-        <div class="p-2 text-sm sm:text-xs text-gray-300 sm:leading-5 text-center sm:text-left pt-8 sm:pt-5 sm:pl-10">
+        <div class="p-2 text-sm sm:text-xs text-purple-300 sm:leading-5 text-center sm:text-left pt-8 sm:pt-5 sm:pl-10">
             Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号 <br class="hidden sm:block"> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px; margin-bottom: 5px;" alt=""></a>&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a>
         </div>
     </div>
