add theme to homepage

--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
     <div class="w-full h-20 fixed top-0 left-0 z-10 backdrop-blur-sm bg-purple-200 bg-opacity-10 border-b border-purple-300">
         <div class="p-7 font-bold text-purple-700/60">
             <div class="text-center m-auto">ZJH.ASIA</div>
-            <div class="text-center" style="font-size: 2px; font-weight:lighter;">更新于 2023.10.7.</div>
+            <div class="text-center font-light text-xs">更新于 2023.10.7.</div>
         </div>
     </div>
     
