--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="w-full h-20 fixed top-0 left-0 z-10 backdrop-blur-sm bg-purple-200 bg-opacity-10 border-b border-purple-300">
-        <div class="p-7 font-bold text-purple-700/60">
+        <div class="pt-5 font-bold text-purple-700/60">
             <div class="text-center m-auto">ZJH.ASIA</div>
             <div class="text-center font-light text-xs">更新于 2023.10.7.</div>
         </div>
