update homepage style

--- a/main/index.html
+++ b/main/index.html
@@ -16,31 +16,13 @@
     </div>
     
 
-    <div class="w-full">
-        <div class="pt-8 w-full m-auto bg-gradient-to-t from-[#fff] via-blue-100 to-blue-300 pb-[300px] sm:pb-[200px]">
-            <div class="max-w-[960px] sm:max-w-[300px] m-auto pt-10 text-center">
 
-                <!-- <div class="mb-2 mt-[-20px] flex flex-none items-center justify-center gap-2 text-xl">
-                    <div class="mr-4 h-px flex-1 bg-gradient-to-l from-[#3e3e3e13] to-[#9494941b]"></div>
-                    <h2 class="text-2xl  text-[#444]">一些写作</h2>
-                    <div class="ml-4 h-px flex-1 bg-gradient-to-r from-[#3e3e3e13] to-[#9494941b]"></div>
-                </div>
-        
-                <p class="flex-none text-lg text-[#888]" style="text-wrap: balance;">
-                    常写常新
-                </p> -->
-            </div>
-        </div>
-    </div>
-
-
-
-    <div class="mb-20 mt-[-280px] sm:pt-[80px]">
+    <div class="pt-[40px] sm:pt-[20px] pb-20 bg-gradient-to-t from-[#fff] via-blue-200/50 to-blue-300">
 
         <div class="max-w-[640px] sm:max-w-[200px] h-fit m-auto 3xl:flex 2xl:flex xl:flex lg:flex md:flex flex-row">
-            <div class="h-[520px] sm:h-[600px]  w-full font-light text-blue-400 text-2xl text-center pt-[70px] sm:pt-[150px] ">
+            <div class="h-[460px] sm:h-[600px]  w-full font-light text-blue-400 text-2xl text-center pt-[70px] sm:pt-[150px] ">
                 <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/storyline-hands-holding-a-magic-book.png" alt="" class="w-48 m-auto">
-                <div class="italic pt-4">在准备考研</div>
+                <div class="italic pt-4">我在准备考研</div>
             </div>
         </div>
 
