--- a/home/index.html
+++ b/home/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    <div class="m-auto max-w-[720px] sm:mx-5 sm:max-w-[360px] mt-[30px] h-fit">
-        <div class="text-3xl font-bold">
-            Jinghe Zhang (<img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/signature/signature2.jpg?x-oss-process=style/small_size_rule" alt="" class="inline w-40">)
-            <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/%E9%80%8F%E6%98%8E-%E6%97%A0%E8%A2%96.png?x-oss-process=style/small_size_rule" alt="" class="inline w-10 mt-[-5px]">
+    <div class="m-auto max-w-[720px] sm:px-5 sm:max-w-[360px] mt-[30px] h-fit">
+        <div class="text-3xl sm:text-lg font-bold">
+            Jinghe Zhang (<img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/signature/signature2.jpg?x-oss-process=style/small_size_rule" alt="" class="inline w-40 sm:w-28">)
+            <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/%E9%80%8F%E6%98%8E-%E6%97%A0%E8%A2%96.png?x-oss-process=style/small_size_rule" alt="" class="inline w-10 sm:w-6 mt-[-5px]">
         </div>
         <div class="my-3">
             Student of 
