--- a/home/index.html
+++ b/home/index.html
@@ -15,16 +15,16 @@
         <div class="my-3">
             Student of 
             <a href="https://computer.upc.edu.cn/">College of Computer Science and Technology,</a>
-            <a href="https://www.upc.edu.cn/">China University of Petroleum (UPC)</a>
+            <a href="https://www.upc.edu.cn/">China University of Petroleum (UPC)</a>.
             
         </div>
         <div class="my-3">
             <ul>
                 <li>
-                    Email: <a href="jinghe.zhang@hotmail.com">jinghe.zhang@hotmail.com</a>
+                    Email: <a href="jinghe.zhang@hotmail.com">jinghe.zhang@hotmail.com</a>.
                 </li>
                 <li>
-                    Address: No. 66, West Changjiang Road, Huangdao District, Qingdao, China, 266580
+                    Address: No. 66, West Changjiang Road, Huangdao District, Qingdao, China, 266580.
                 </li>
             </ul>
         </div>
