--- a/home/index.html
+++ b/home/index.html
@@ -14,14 +14,14 @@
         </div>
         <div class="my-3">
             Student of 
-            <a href="https://computer.upc.edu.cn/">College of Computer Science and Technology,</a>
-            <a href="https://www.upc.edu.cn/">China University of Petroleum (UPC)</a>.
+            <a target="_blank" href="https://computer.upc.edu.cn/">College of Computer Science and Technology,</a>
+            <a target="_blank" href="https://www.upc.edu.cn/">China University of Petroleum (UPC)</a>.
             
         </div>
         <div class="my-3">
             <ul>
                 <li>
-                    Email: <a href="jinghe.zhang@hotmail.com">jinghe.zhang@hotmail.com</a>.
+                    Email: <a href="mailto:jinghe.zhang@hotmail.com">jinghe.zhang@hotmail.com</a>.
                 </li>
                 <li>
                     Address: No. 66, West Changjiang Road, Huangdao District, Qingdao, China, 266580.
@@ -54,7 +54,7 @@
                                 2023.9.
                             </span>
                         </li>
-                        <a href="./awards.txt">
+                        <a href="./awards.md">
                             ... ...
                         </a>
                     </ul>
