--- a/home/index.html
+++ b/home/index.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
 
-        <table class=" my-3 w-full">
+        <!-- <table class=" my-3 w-full">
             <tr>
                 <td class="td1">Awards</td>
                 <td class="td2">
@@ -60,7 +60,7 @@
                     </ul>
                 </td>
             </tr>
-        </table>
+        </table> -->
 
         <div class="my-3">
             <ul class="link_ul">
