--- a/home/index.html
+++ b/home/index.html
@@ -68,10 +68,10 @@
                     Links:
                 </li>
                 <li>
-                    <a target="_blank" href="https://zjh.asia/notebook">笔记</a>
+                    <a target="_blank" href="http://120.55.62.89/notebook">笔记</a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://zjh.asia/life">生活记录</a>
+                    <a target="_blank" href="http://120.55.62.89/life">生活记录</a>
                 </li>
             </ul>
         </div>
