--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
         <div class="my-3">
             Student of 
             <a target="_blank" href="https://computer.upc.edu.cn/">College of Computer Science and Technology,</a>
-            <a target="_blank" href="https://www.upc.edu.cn/">China University of Petroleum (UPC)</a>.
+            <a target="_blank" href="https://www.upc.edu.cn/">China University of Petroleum (East China)</a>.
             
         </div>
         <div class="my-3">
